Fixed sizing issue on mobile.

--- a/_styles/starch_main.less
+++ b/_styles/starch_main.less
@@ -118,7 +118,7 @@ body {
 	font-size: 1.3em;
 
 	@media only screen and (max-width: 1000px) {
-		font-size: 2.0vmax;
+		font-size: 1.3vmax;
 	}
 
 	::-webkit-scrollbar-track {
